--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -44,7 +44,9 @@
 
     <% end %>
 
-    <span style="position:absolute;margin-left:50px;top:900px;"><%= link_to 'Destroy', current_user, method: :delete, data: { confirm: 'Are you sure?' }  %></span>
+    <span style="position:absolute;margin-left:50px;top:900px;margin-bottom:100px;height:100px;"><%= link_to 'Destroy', current_user, method: :delete, data: { confirm: 'Are you sure?' }  %></span>
+
+
   </div>
 </div>
 </div>
