--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
 
 
 
-<div style="margin-right:240px;">
+<div style="">
 <% @user ||= current_user %>
 <% @users.each do |user| %>
   <div class="dir" style="z-index:50;">
