--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,7 +17,7 @@
 	
 	
 	
-<img style="position:absolute;top:0px;left:0px;margin: 0px auto;width:100%;" src="/assets/femynyn.png"/>
+<img style="position:absolute;top:0px;left:0px;margin: 0px auto;width:100%;" src="/assets/vilajio.png"/>
 
 	<bar data-toggle="modal" href="#entermodal" style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
 		<h1 style="margin-top:2px;font-size:22px;color:grey">V i l a j i o</h1>
