--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -77,13 +77,30 @@ $(function() {
         source: availableSchools
     });
     var availableYears = [
-        "Year 7",
-        "Year 8",
-        "Year 9",
-        "Year 10",
-        "Year 11",
-        "Year 12",
-        "Year 13"
+        "Class of 1995",
+        "Class of 1996",
+		"Class of 1997",
+		"Class of 1998",
+		"Class of 1999",
+		"Class of 2000",
+		"Class of 2001",
+		"Class of 2002",
+		"Class of 2003",
+		"Class of 2004",
+		"Class of 2005",
+		"Class of 2006",
+		"Class of 2007",
+		"Class of 2008",
+		"Class of 2009",
+		"Class of 2010",
+		"Class of 2011",
+		"Class of 2012",
+		"Class of 2013",
+		"Class of 2014",
+		"Class of 2015",
+		"Class of 2016",
+		"Class of 2017",
+		"Class of 2018"
     ];
     $( "#year" ).autocomplete({
         source: availableYears
