--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -69,19 +69,30 @@
 	<bar2 style="top:0px;width:200px;height:50px;border-bottom:1px solid #1d1d1d;"><p>Profile</p></bar2>
 	<% end %>
 	
+	
 	<%= link_to tagged_url(:tag => current_user.name ) do %>
 	<bar2 style="top:0px;width:200px;height:50px;border-bottom:1px solid #1d1d1d;"><p>My Wall</p></bar2>
 	<% end %>
 	
+	<% if current_user.school %>
 	<%= link_to tagged_url(:tag => current_user.school) do %>
 	<bar2 style="top:0px;width:200px;height:50px;border-bottom:1px solid #1d1d1d;"><p><%= h truncate(current_user.school, :length => 25) %></p></bar2>
 	<% end %>
-	
+
 	<% @year = [current_user.school, current_user.schoolyear] %>
 	
 	<%= link_to tagged_url(:tag => @year) do %>
 	<bar2 style="top:0px;width:200px;height:50px;border-bottom:1px solid #1d1d1d;"><p><%= raw h truncate(current_user.schoolyear, :length => 23) %></p></bar2>
 	<% end %>
+	
+	<% else %>
+
+	<%= link_to edit_user_path(current_user) do %>
+	<bar2 style="top:0px;width:200px;height:100px;border-bottom:1px solid #1d1d1d;"><p>Add School</p></bar2>
+	<% end %>
+	
+	<% end %>
+	
 	
 	<%= link_to signout_path, method: "delete" do %>
 	<bar2 style="top:0px;width:200px;height:50px;border-bottom:1px solid #1d1d1d;"><p>Sign Out</p></bar2>
