--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,11 +51,8 @@
 <% if signed_in? %>
 <% @micropost = current_user.microposts.build(params[:micropost]) %>
 <section>
-<div class="modal hide" id="entermodal" style="width:600px;height:300px;background-color:#953361;"><%= render 'shared/micropost_form' %></div>
-<div class="modal hide" id="link" style="width:600px;height:500px;background-color:black;"><%= render 'shared/link_form' %></div>
-<div class="modal hide" id="text" style="width:600px;height:500px;background-color:black;"><%= render 'shared/text_form' %></div>
+<div class="modal hide" id="entermodal" style="width:600px;height:150px;"><%= render 'shared/micropost_form' %></div>
 <div class="modal hide" id="video" style="width:600px;height:500px;background-color:black;"><%= render 'shared/video_form' %></div>
-<div class="modal hide" id="picture" style="width:600px;height:500px;background-color:black;"><%= render 'shared/picture_form' %></div>
 <div class="modal hide" id="school" style="width:600px;height:500px;background-color:black;"><%= render 'shared/school_form' %></div>
 <div class="modal hide" id="year" style="width:600px;height:500px;background-color:black;"><%= render 'shared/year_form' %></div>
 </section>
