--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,9 +1,8 @@
-<tbar data-toggle="modal" href="#picture" style="position:absolute;margin-left:0px;width:200px;height:150px;"><p>Picture</p></tbar>
-<tbar data-toggle="modal" href="#link" style="position:absolute;margin-left:200px;width:200px;height:150px;"><p>Link</p></tbar>
-<tbar data-toggle="modal" href="#video" style="position:absolute;margin-left:0px;top:150px;width:200px;height:150px;"><p>Video</p></tbar>
-<tbar data-toggle="modal" href="#text" style="position:absolute;margin-left:200px;top:150px;width:200px;height:150px;"><p>Text</p></tbar>
-<tbar data-toggle="modal" href="#school" style="position:absolute;margin-left:400px;width:200px;height:150px;"><p><%= current_user.school %></p></tbar>
-<tbar data-toggle="modal" href="#year" style="position:absolute;margin-left:400px;top:150px;width:200px;height:150px;"><p><%= current_user.schoolyear %></p></tbar>
+<tbar data-toggle="modal" href="#year" style="position:absolute;margin-left:0px;width:200px;height:150px;color:#cfcfcf;font-size:18px;"><p><%= current_user.schoolyear %></p></tbar>
+<tbar data-toggle="modal" href="#video" style="position:absolute;margin-left:200px;width:200px;height:150px;color:#cfcfcf;font-size:18px;"><p>Slough</p></tbar>
+
+
+<tbar data-toggle="modal" href="#school" style="position:absolute;margin-left:400px;width:200px;height:150px;color:#cfcfcf;font-size:18px;"><p><%= current_user.school %></p></tbar>
 
 
 
