--- a/app/views/shared/_video_form.html.erb
+++ b/app/views/shared/_video_form.html.erb
@@ -1,15 +1,18 @@
 <%= form_for @micropost, :html => {:multipart => true} do |f| %>
 
-<tbar style="position:fixed;width:600px;height:42px;"><p>Video</p></tbar>
+<tbar style="position:fixed;width:600px;height:42px;#cfcfcf;font-size:18px;"><p>Slough</p></tbar>
 
-<tbar style="position:fixed;margin-left:50px;top:230px;width:120px;height:42px;"><p>Video Link</p></tbar>
-<span style="position:fixed;margin-left:168px;top:231px;"><%= f.text_field :link, style: "width:370px;height:30px;" %></span>
 
-<tbar style="position:fixed;margin-left:50px;top:290px;width:120px;height:102px;"><p>Description</p></tbar>
-<span style="position:fixed;margin-left:168px;top:291px;"><%= f.text_field :content, style: "width:370px;height:91px;" %></span>
+<span style="position:fixed;margin-left:48px;top:231px;"><%= f.text_field :tag_list, placeholder: "e.g. omg, lol, james786", style: "width:490px;height:30px;color:#cfcfcf;font-size:18px;" %></span>
 
-<tbar style="position:fixed;margin-left:50px;top:410px;width:120px;height:42px;"><p>Tags</p></tbar>
-<span style="position:fixed;margin-left:168px;top:411px;"><%= f.text_area :content, :rows => 5 , style: "width:370px;height:30px;" %></span>
+<tbar style="position:fixed;margin-left:50px;top:170px;width:120px;height:42px;"><p>Image</p></tbar>
+<span style="position:fixed;margin-left:168px;top:169px;"><%= f.file_field :image, class: "bar", style: "width:377px;height:40px;" %></span>
+
+
+<span style="position:fixed;margin-left:48px;top:291px;"><%= f.text_field :link, placeholder: "http://" ,style: "color:#cfcfcf;font-size:18px;width:490px;height:30px;" %></span>
+
+
+<span style="position:fixed;margin-left:48px;top:356px;"><%= f.text_area :content, placeholder: "What's happening in Slough?", :rows => 5 , style: "width:490px;height:89px;color:#cfcfcf;font-size:18px;" %></span>
 
 <span style="position:fixed;margin-left:50px;top:490px;"><%= f.submit "Post", class: "bar", style: "width:500px;height:42px;" %></span>
 
