--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,7 +30,7 @@
 	<span style="position:absolute;margin-left:168px;top:501px;"><%= f.text_field :school,id: "school", style: "width:370px;height:30px;" %></span>
 	
 	<tbar style="position:absolute;margin-left:50px;top:570px;width:120px;height:42px;z-index:60;"><o>Year</o></tbar>
-	<span style="position:absolute;margin-left:168px;top:571px;"><%= f.text_field :schoolyear,id: "year", placeholder: "Class of ..." style: "width:370px;height:30px;" %></span>
+	<span style="position:absolute;margin-left:168px;top:571px;"><%= f.text_field :schoolyear,id: "year", placeholder: "Class of ...", style: "width:370px;height:30px;" %></span>
 	
 	
 	<tbar style="position:absolute;margin-left:50px;top:640px;width:120px;height:42px;z-index:60;"><o>Password</o></tbar>
