--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4704,7 +4704,7 @@ html {
 }
 body {
   min-height: 100%;
-  background-color: black;
+  background-color: #cfcfcf;
 }
 .page-header {
   border-bottom: 2px solid #33b5e5;
